--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Opération Bol d'air</title>
+    
+    <meta property="og:url"                content="https://operation-bol-d-air.fr" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Opération Bol d'air - spécial confinement" />
+    <meta property="og:description"        content="Un livre numérique offert chaque jour pour ne pas devenir complètement chèvre" />
+    <meta property="og:image"              content="https://operation-bol-d-air.fr/preview.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
