--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Un livre numérique offert chaque jour pour ne pas devenir complètement chèfre !"
+      content="Un livre numérique offert chaque jour pour ne pas devenir complètement chèvre !"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -19,12 +19,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Opération Bol d'air</title>
-    
-    <meta property="og:url"                content="https://operation-bol-d-air.fr" />
-    <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="Opération Bol d'air - spécial confinement" />
-    <meta property="og:description"        content="Un livre numérique offert chaque jour pour ne pas devenir complètement chèvre" />
-    <meta property="og:image"              content="https://operation-bol-d-air.fr/preview.png" />
+
+    <meta property="og:url" content="https://operation-bol-d-air.fr" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Opération Bol d'air - spécial confinement"
+    />
+    <meta
+      property="og:description"
+      content="Un livre numérique offert chaque jour pour ne pas devenir complètement chèvre"
+    />
+    <meta
+      property="og:image"
+      content="https://operation-bol-d-air.fr/preview.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
