--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Opération Bol d'air</title>
+    <title>Opération Bol d'air - Un ebook gratuit par jour</title>
 
     <meta property="og:url" content="https://operation-bol-d-air.fr" />
     <meta property="og:type" content="website" />
