Update open graph preview image

--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,11 @@
     />
     <meta
       property="og:description"
-      content="Un livre numérique offert chaque jour pour ne pas devenir complètement chèvre"
+      content="Un ebook chaque jour pour ne pas devenir chèvre !"
     />
     <meta
       property="og:image"
-      content="https://operation-bol-d-air.fr/preview.png"
+      content="https://operation-bol-d-air.fr/preview-2.png"
     />
   </head>
   <body>
