Add final preview image

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     />
     <meta
       property="og:image"
-      content="https://operation-bol-d-air.fr/preview-3.png"
+      content="https://operation-bol-d-air.fr/preview-final.jpg"
     />
   </head>
   <body>
